用户登录与注册前台

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "movie",
   "main": "app.js",
   "dependencies": {
+    "bcrypt": "^0.8.7",
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
     "jade": "^1.11.0",
