--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "jade": "^1.11.0",
     "moment": "^2.15.0",
     "mongoose": "^4.6.0",
+    "morgan": "^1.7.0",
     "underscore": "^1.8.3"
   },
   "devDependencies": {
