--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "bcryptjs": "^2.3.0",
     "body-parser": "^1.15.2",
     "connect-mongo": "^1.3.2",
+    "connect-multiparty": "^2.0.0",
     "cookie-parser": "^1.4.3",
     "express": "^4.14.0",
     "express-session": "^1.14.1",
