--- a/package.json
+++ b/package.json
@@ -11,24 +11,24 @@
     "cookie-parser": "^1.4.3",
     "express": "^4.14.0",
     "express-session": "^1.14.1",
-    "grunt-mocha-test": "^0.13.2",
     "jade": "^1.11.0",
     "moment": "^2.15.0",
     "mongoose": "^4.6.0",
     "morgan": "^1.7.0",
-    "should": "^11.1.0",
     "underscore": "^1.8.3"
   },
   "devDependencies": {
-    "grunt": "^1.0.1",
-    "grunt-concurrent": "^2.3.1",
-    "grunt-contrib-watch": "^1.0.0",
-    "grunt-mocha-test": "^0.13.2",
-    "grunt-nodemon": "^0.4.2",
-    "mocha": "^3.1.0"
+    "babel-core": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-3": "^6.24.1",
+    "chai": "^4.1.2",
+    "eslint-config-rallycoding": "^3.2.0",
+    "mocha": "^3.1.0",
+    "nodemon": "^1.12.1"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "server": "nodemon --harmony app.js --config nodemonrc.json",
+    "test": "mocha --compilers js:babel-core/register ./test/ --recursive"
   },
   "author": "ncyu",
   "license": "ISC"
