重构测试代码，给Schema添加更多静态方法：删除、修改、查询指定条件所有条目以及单个条目

--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
   },
   "scripts": {
     "server": "nodemon --harmony ./server/index.js --config nodemonrc.json",
-    "test": "mocha --compilers js:babel-core/register ./test/ --recursive"
+    "test": "mocha --compilers js:babel-core/register --require ./test/server/helper.js ./test/server/ --recursive"
   },
   "author": "ncyu",
   "license": "ISC"
