测试EXCEL文件导入和导出到EXCEL文件

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,7 @@
 .DS_Store
 /node_modules/
-/**/public/libs/
+/test/utils/*.jpeg
+/test/utils/*.jpg
+/test/utils/*.xlsx
 yarn-error.log
+/**/public/libs/
