--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "moment": "^2.15.0",
     "mongoose": "^4.6.0",
     "morgan": "^1.7.0",
+    "node-xlsx": "^0.11.2",
     "underscore": "^1.8.3"
   },
   "devDependencies": {
