所有接口postman测试以及Bug修复

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,6 @@
 .DS_Store
 /node_modules/
-/test/utils/*.jpeg
-/test/utils/*.jpg
-/test/utils/*.xlsx
+/server/public/upload/
+/test/utils/
+/test/utils/!*.js
 yarn-error.log
-/**/public/libs/
