配置客户端react+webpack环境

--- a/package.json
+++ b/package.json
@@ -4,30 +4,55 @@
   "description": "movie",
   "main": "app.js",
   "dependencies": {
+    "autoprefixer": "^7.2.3",
     "bcryptjs": "^2.3.0",
     "body-parser": "^1.15.2",
     "connect-mongo": "^1.3.2",
     "connect-multiparty": "^2.1.0",
     "cookie-parser": "^1.4.3",
+    "css-loader": "^0.28.7",
     "express": "^4.14.0",
     "express-session": "^1.14.1",
+    "immutable": "^3.8.2",
+    "less": "^2.7.3",
+    "less-loader": "^4.0.5",
     "mongoose": "^4.6.0",
     "morgan": "^1.7.0",
+    "node-sass": "^4.7.2",
     "node-xlsx": "^0.11.2",
+    "postcss-loader": "^2.0.9",
+    "react": "^16.2.0",
+    "react-addons-pure-render-mixin": "^15.6.2",
+    "react-dom": "^16.2.0",
+    "react-redux": "^5.0.6",
+    "react-router-dom": "^4.2.2",
+    "redux": "^3.7.2",
+    "sass-loader": "^6.0.6",
+    "style-loader": "^0.19.1",
     "underscore": "^1.8.3"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
     "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
     "babel-preset-stage-3": "^6.24.1",
     "chai": "^4.1.2",
+    "chai-immutable": "^1.6.0",
     "eslint-config-rallycoding": "^3.2.0",
+    "jsdom": "^11.5.1",
     "mocha": "^3.1.0",
-    "nodemon": "^1.12.1"
+    "nodemon": "^1.12.1",
+    "react-hot-loader": "^3.1.3",
+    "webpack": "^3.10.0",
+    "webpack-dev-server": "^2.9.7"
   },
   "scripts": {
     "server": "nodemon --harmony ./server/index.js --config nodemonrc.json",
-    "test": "mocha --compilers js:babel-core/register --require ./test/server/helper.js ./test/server/ --recursive"
+    "test:server": "mocha --compilers js:babel-core/register --require ./test/server/helper.js ./test/server/ --recursive",
+    "test:client": "mocha --compilers js:babel-core/register --require ./test/client/helper.js ./test/client/ --recursive",
+    "build": "webpack",
+    "dev": "webpack-dev-server"
   },
   "author": "ncyu",
   "license": "ISC"
