--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "app.js",
   "dependencies": {
     "autoprefixer": "^7.2.3",
+    "axios": "^0.17.1",
     "bcryptjs": "^2.3.0",
     "body-parser": "^1.15.2",
     "connect-mongo": "^1.3.2",
@@ -27,6 +28,8 @@
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
     "redux": "^3.7.2",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.2.0",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.19.1",
     "underscore": "^1.8.3"
