--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^4.14.0",
     "express-session": "^1.14.1",
     "immutable": "^3.8.2",
+    "jquery": "^3.2.1",
     "less": "^2.7.3",
     "less-loader": "^4.0.5",
     "mongoose": "^4.6.0",
