--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "antd": "^3.0.3",
     "autoprefixer": "^7.2.3",
     "axios": "^0.17.1",
+    "axios-mock-adapter": "^1.10.0",
     "bcryptjs": "^2.3.0",
     "body-parser": "^1.15.2",
     "connect-mongo": "^1.3.2",
@@ -19,6 +20,7 @@
     "jquery": "^3.2.1",
     "less": "^2.7.3",
     "less-loader": "^4.0.5",
+    "mockjs": "^1.0.1-beta3",
     "mongoose": "^4.6.0",
     "morgan": "^1.7.0",
     "node-sass": "^4.7.2",
