--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
     "mockjs": "^1.0.1-beta3",
     "mongoose": "^4.6.0",
     "morgan": "^1.7.0",
-    "node-sass": "^4.7.2",
     "node-xlsx": "^0.11.2",
     "postcss-loader": "^2.0.9",
     "react": "^16.2.0",
@@ -36,13 +35,13 @@
     "redux-logger": "^3.0.6",
     "redux-promise": "^0.5.3",
     "redux-thunk": "^2.2.0",
-    "sass-loader": "^6.0.6",
     "style-loader": "^0.19.1",
     "underscore": "^1.8.3"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
+    "babel-plugin-import": "^1.12.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-3": "^6.24.1",
